syntax="proto3";

package offchainreporting2_config;

message OffchainConfigProto {
  uint64 delta_progress_nanoseconds = 1;
  uint64 delta_resend_nanoseconds = 2;
  uint64 delta_round_nanoseconds = 3;
  uint64 delta_grace_nanoseconds = 4;
  uint64 delta_stage_nanoseconds = 5;
  uint32 r_max = 6;
  repeated uint32 s = 7;
  repeated bytes offchain_public_keys = 8;
  repeated string peer_ids = 9;
  bytes reporting_plugin_config = 10;
  uint64 max_duration_query_nanoseconds = 11;
  uint64 max_duration_observation_nanoseconds = 12;
  uint64 max_duration_report_nanoseconds = 13;
  uint64 max_duration_should_accept_finalized_report_nanoseconds = 14;
  uint64 max_duration_should_transmit_accepted_report_nanoseconds = 15;
  SharedSecretEncryptionsProto shared_secret_encryptions = 16;
}


message SharedSecretEncryptionsProto {
  bytes diffieHellmanPoint = 1;
  bytes sharedSecretHash = 2;
  repeated bytes encryptions = 3;
}

message ReportingPluginConfig {
  bool alpha_report_infinite = 1;
  uint64 alpha_report_ppb = 2;
  bool alpha_accept_infinite = 3;
  uint64 alpha_accept_ppb = 4;
  uint64 delta_c_nanoseconds = 5;
}